dev/cic-eth-tracker-watch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: grassroots
  name: cic-eth-tracker-watch
  labels:
    app: cic-eth-tracker-watch
spec:
  selector:
    matchLabels:
      app: cic-eth-tracker-watch
  replicas: 1
  template:
    metadata:
      labels:
        app: cic-eth-tracker-watch
        group: cic-stack
    spec:
      containers:
        - name: cic-eth-tracker-watch
          image: docker.grassecon.net/devops/cic-eth-tracker-watch:1.0.2
          imagePullPolicy: Always
      restartPolicy: Always
