dev/ethstats-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: grassroots
  name: ethstats-client
  labels:
    app: ethstats-client
spec:
  selector:
    matchLabels:
      app: ethstats-client
  replicas: 1
  template:
    metadata:
      labels:
        app: ethstats-client
        group: cic-stack
    spec:
      containers:
        - name: ethstats-client
          image: docker.grassecon.net/kitabu/ethstats-client:1.0.0
          imagePullPolicy: Always
      restartPolicy: Always
