dev/q-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: grassroots
  name: q-bot
  labels:
    app: q-bot
spec:
  selector:
    matchLabels:
      app: q-bot
  replicas: 1
  template:
    metadata:
      labels:
        app: q-bot
        group: cic-stack
    spec:
      containers:
        - name: q-bot
          image: docker.grassecon.net/devops/q-bot:1.0.5
          imagePullPolicy: Always
      restartPolicy: Always
