dev/loki-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-np
  namespace: grassroots
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: loki
  ports:
    - port: 3100
      targetPort: 3100
      nodePort: 30009
