dev/postgres-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-np
  namespace: grassroots
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: postgresql
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30008
