dev/redis-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-np
  namespace: grassroots
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: redis
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 30007
