dev/postgres-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres-ingress
  namespace: grassroots
spec:
  entryPoints:
    - tcpep
  routes:
    - match: HostSNI(`*`)
      services:
        - name: postgres-postgresql
          port: tcp-postgresql
